--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'am Arnab</h1>
                         <h3 class="home__subtitle" id="typing-text"
-                            style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif font-size: x-large;">
+                            style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: x-large;">
                             Full Stack Software Engineer</h3><br>
                         <p class="home__description"
                             style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
@@ -533,7 +533,7 @@
                                 <span class="qualification__subtitle">Full Time</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Feb, 2022 - May, 2022
+                                    Feb, 2022 - May, 2023
                                 </div>
                             </div>
 
