--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title>Arnab's - Portfolio</title>
     <!-- Add Falcon favicon -->
-    <link rel="icon" type="image/png" href="packages/images/icons8-port.png">
+    <link rel="icon" type="image/png" href="packages/images/favicon.ico">
 </head>
 
 <body>
