--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                         </a>
                     </li>
                     <li class="nav__item">
+                        <a href="#qualifications_work" class="nav__link">
+                            <i class="uil uil-briefcase-alt nav__icon"></i>My Career
+                        </a>
+                    </li>
+                    <li class="nav__item">
                         <a href="#services" class="nav__link">
                             <i class="uil uil-briefcase-alt nav__icon"></i>Services
                         </a>
@@ -114,7 +119,7 @@
                             Full Stack Software Engineer</h3><br>
                         <p class="home__description"
                             style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-                            As a motivated software developer wiht more than 2.5 years of experience, I bring a
+                            As a motivated software developer with more than 2.5 years of experience, I bring a
                             mission-driven approach and a fresh perspective to the field, ready to contribute with my
                             passion for coding and eagerness to learn.</p>
                         <a href="#contact" class="button button--flex home__button">
@@ -142,7 +147,7 @@
                 <img src="packages/images/imgak9.jpg" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description">
-                        I am a Software Engineer with 2.6+ years of experience in developing scalable web applications.
+                        I am a Software Engineer with 2.5+ years of experience in developing scalable web applications.
                         Currently I am working at <b><i>Accenture</i></b>. I specialize in <b><i>Python, FlaskAPI,
                                 ReactJS</i></b>, and have worked on projects integrating <b><i>Generative AI</i></b> and
                         optimizing backend APIs. My experience spans across both backend and frontend development, with
@@ -267,7 +272,7 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Bootstarp</h3>
+                                    <h3 class="skills__name">Bootstrap</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -451,9 +456,9 @@
         </section>
 
         <!--==================== QUALIFICATION ====================-->
-        <section class="qualification__section">
-            <h2 class="section__title">Qualification</h2>
-            <span class="section__subtitle">My Career Journey</span>
+        <section class="qualification section" id="qualifications_work">
+            <h2 class="section__title">My Career</h2>
+            <span class="section__subtitle">Journey</span>
 
             <div class="qualification__container container">
                 <div class="qualification__tabs">
@@ -748,7 +753,7 @@
 
         <!--==================== CONTACT ME ====================-->
         <section class="contact section" id="contact">
-            <h2 class="section__title">Contact me</h2>
+            <h2 class="section__title">Contact</h2>
             <span class="section__subtitle">Get in touch</span>
 
             <div class="contact__container container grid">
@@ -831,9 +836,9 @@
                     <li>
                         <a href="#services" class="footer__link">Services</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#portfolio" class="footer__link">Portfolio</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="#contact" class="footer__link">Contact</a>
                     </li>
