--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I'am Arnab</h1>
+                        <h1 class="home__title">Hi, I'm Arnab</h1>
                         <h3 class="home__subtitle" id="typing-text"
                             style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: x-large;">
                             Full Stack Software Engineer</h3><br>
