Formspree link change

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
                     </div>
                 </div>
 
-                <form action="https://formspree.io/f/xdoqygel" method="POST" class="contact__form grid">
+                <form action="https://formspree.io/f/mqazlzee" method="POST" class="contact__form grid">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="name" class="contact__label">Name</label>
