--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </p>
 
                     <div class="about__buttons">
-                        <a download="" href="packages/Arnab_Resume.pdf" class="button button--flex">
+                        <a download="" href="packages/Arnab_Resume_A3.pdf" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
